<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PasswordRegistration">

    <ImageView
        android:id="@+id/register_password_top_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:src="@drawable/ic_registration_textbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

    </ImageView>

    <EditText
        android:id="@+id/register_password_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        android:textColorHint="@color/grey"
        android:backgroundTint="#FFF"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_password_top_box"
        app:layout_constraintEnd_toEndOf="@+id/register_password_top_box"
        app:layout_constraintStart_toStartOf="@+id/register_password_top_box"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/registration_password_visibility_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0000"
        android:src="@drawable/ic_password_visible"
        android:contentDescription="@string/non_visible"
        app:layout_constraintBottom_toBottomOf="@+id/register_password_top_box"
        app:layout_constraintEnd_toEndOf="@+id/register_password_top_box"
        app:layout_constraintStart_toEndOf="@+id/register_password_top"
        app:layout_constraintTop_toTopOf="@+id/register_password_top_box" />

    <ImageView
        android:id="@+id/register_password_bottom_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_registration_textbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_password_top_box"
        app:layout_constraintStart_toStartOf="@+id/register_password_top_box"
        app:layout_constraintTop_toBottomOf="@+id/register_password_top_box"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="ContentDescription">

    </ImageView>

    <EditText
        android:id="@+id/register_password_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="#FFF"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_password_bottom_box"
        app:layout_constraintEnd_toEndOf="@+id/register_password_bottom_box"
        app:layout_constraintStart_toStartOf="@+id/register_password_bottom_box"
        app:layout_constraintTop_toTopOf="@+id/register_password_bottom_box"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/register_password_requirement_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_information"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/register_password_bottom_box"
        app:layout_constraintEnd_toEndOf="@+id/register_password_bottom_box"
        app:layout_constraintStart_toEndOf="@+id/register_password_bottom"
        app:layout_constraintTop_toTopOf="@+id/register_password_bottom_box"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@color/white"
        android:src="@drawable/ic_registration_next_button"
        app:layout_constraintEnd_toEndOf="@+id/register_password_bottom_box"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/register_password_bottom_box"
        app:layout_constraintTop_toBottomOf="@+id/register_password_bottom_box"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/titillium_web_semibold"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toTopOf="@+id/register_button" />

    <TextView
        android:id="@+id/user_agreement_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web"
        android:textSize="12sp"
        android:paddingHorizontal="3dp"
        android:textColor="@color/grey"
        android:text="@string/user_agreement_1"
        app:layout_constraintBottom_toBottomOf="@+id/user_agreement_checkbox"
        app:layout_constraintStart_toEndOf="@+id/user_agreement_checkbox"
        app:layout_constraintTop_toTopOf="@+id/user_agreement_checkbox">

    </TextView>

    <CheckBox
        android:id="@+id/user_agreement_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:buttonTint="@color/myway_blue"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintEnd_toEndOf="@+id/register_password_bottom_box"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="@+id/register_password_bottom_box"
        app:layout_constraintTop_toBottomOf="@+id/register_password_bottom_box" />

    <TextView
        android:id="@+id/user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_semibold"
        android:text="@string/user_agreement"
        android:textColor="@color/mapboxBlue"
        android:textSize="12sp"
        android:paddingHorizontal="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_agreement_1"
        app:layout_constraintStart_toEndOf="@+id/user_agreement_1"
        app:layout_constraintTop_toTopOf="@+id/user_agreement_1" />

    <TextView
        android:id="@+id/and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web"
        android:text="@string/and"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:paddingHorizontal="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_agreement"
        app:layout_constraintStart_toEndOf="@+id/user_agreement"
        app:layout_constraintTop_toTopOf="@+id/user_agreement" />

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="90dp"
        android:layout_height="16dp"
        android:paddingHorizontal="2dp"
        android:fontFamily="@font/titillium_web_semibold"
        android:text="@string/privacy_policy"
        android:textColor="@color/mapboxBlue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/and"
        app:layout_constraintStart_toEndOf="@+id/and"
        app:layout_constraintTop_toTopOf="@+id/and"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registration_password_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/different_password_warning"
        android:visibility="invisible"
        android:textColor="@color/red"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/register_password_bottom_box"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="@+id/register_password_bottom_box"
        app:layout_constraintTop_toBottomOf="@+id/register_password_bottom_box" />


</androidx.constraintlayout.widget.ConstraintLayout>