<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EmailRegistration">

    <ImageView
        android:id="@+id/registration_email_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:src="@drawable/ic_registration_textbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

    </ImageView>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:backgroundTint="#FFF"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/registration_email_box"
        app:layout_constraintEnd_toEndOf="@+id/registration_email_box"
        app:layout_constraintStart_toStartOf="@+id/registration_email_box"
        app:layout_constraintTop_toTopOf="@+id/registration_email_box"
        tools:ignore="RtlSymmetry">

    </EditText>

    <ImageButton
        android:id="@+id/next_button_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_registration_next_button"
        app:layout_constraintEnd_toEndOf="@+id/registration_email_box"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/registration_email_box"
        app:layout_constraintTop_toBottomOf="@+id/registration_email_box"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/next_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_semibold"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/next_button_email"
        app:layout_constraintEnd_toEndOf="@+id/next_button_email"
        app:layout_constraintStart_toStartOf="@+id/next_button_email"
        app:layout_constraintTop_toTopOf="@+id/next_button_email" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="30dp"
        android:layout_height="29dp"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="@+id/registration_email_box"
        app:layout_constraintEnd_toEndOf="@+id/registration_email_box"
        app:layout_constraintStart_toEndOf="@+id/register_email"
        app:layout_constraintTop_toTopOf="@+id/registration_email_box"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/email_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/invalid_email"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/registration_email_box"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="@+id/registration_email_box"
        app:layout_constraintTop_toBottomOf="@+id/registration_email_box" />

</androidx.constraintlayout.widget.ConstraintLayout>